--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,29 +6,45 @@
 	<meta charset="utf-8">
 	<title>Walkthrough</title>
 	<script id="sap-ui-bootstrap" src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
-		data-sap-ui-theme="sap_bluecrystal" data-sap-ui-libs="sap.m" data-sap-ui-compatVersion="edge"
-		data-sap-ui-preload="async" data-sap-ui-resourceroots='{"sample-app": "./"}'>
+		data-sap-ui-theme="sap_bluecrystal" 
+		data-sap-ui-libs="sap.m" 
+		data-sap-ui-compatVersion="edge"
+		data-sap-ui-preload="async" 
+		data-sap-ui-resourceroots='{"sample-app-copy": "./"}'>
 		</script>
-	<script>
-		sap.ui.getCore().attachInit(function () {
-			// sap.ui.xmlview({
-			//	viewName : "sample-app.view.App"
-			//}).placeAt("content");  
-			//new sap.ui.core.ComponentContainer({
-			//		name : "sample-app"
-			//}).placeAt("content");
-
-			new sap.m.Shell({
-				app: new sap.ui.core.ComponentContainer({
-					name: "sample-app",
-					height: "100%"
-				})
-			}).placeAt("content");
-		});
-	</script> 
+		<script>
+			sap.ui.getCore().attachInit(function () {
+				// JSON Model
+				var oModel = new sap.ui.model.json.JSONModel({
+					firstName : "Harry",
+					lastName  : "Hawk",
+					enabled   : true,
+					address   : {
+						street : "Dietmar-Hopp-Allee 16",
+						city : "Walldorf",
+						zip : "69190",
+						country : "Germany"
+					   }
+					
+				});   
+				sap.ui.getCore().setModel(oModel);
+		
+				// Resource Model (i18n)
+				var oResourceModel = new sap.ui.model.resource.ResourceModel({
+					bundleName : "sample-app-copy.i18n.i18n"
+				});
+				sap.ui.getCore().setModel(oResourceModel, "i18n");
+		
+				// Display the XML view called "App"
+				new sap.ui.core.mvc.XMLView({
+					viewName : "sample-app-copy.view.App"
+				}).placeAt("content");
+			});
+		</script>
 </head>
 
 <body class="sapUiBody" id="content">
+
 </body>
 
 </html>
