--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="utf-8">
 	<title>Walkthrough</title>
-	<script id="sap-ui-bootstrap" src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+	<script id="sap-ui-bootstrap" 
+		src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_bluecrystal" 
 		data-sap-ui-libs="sap.m" 
 		data-sap-ui-compatVersion="edge"
@@ -47,4 +48,81 @@
 
 </body>
 
+</html> -->
+
+
+<!-- <!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8">
+    <title>Walkthrough</title>
+ 
+    <script id="sap-ui-bootstrap"
+        src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+        data-sap-ui-theme="sap_bluecrystal"
+        data-sap-ui-libs="sap.m"
+		data-sap-ui-async="true"
+        data-sap-ui-compatVersion="edge"
+        data-sap-ui-preload="async"
+        data-sap-ui-resourceroots='{"sample-app-copy": "./"}'>
+    </script>
+
+    <script>
+        sap.ui.getCore().attachInit(function () {
+
+            // JSON Model
+            var oModel = new sap.ui.model.json.JSONModel({
+                firstName: "Harry",
+                lastName: "Hawk",
+                enabled: true,
+                address: {
+                    street: "Dietmar-Hopp-Allee 16",
+                    city: "Walldorf",
+                    zip: "69190",
+                    country: "Germany"
+                }
+            });
+            sap.ui.getCore().setModel(oModel);
+
+            // Resource Model (i18n)
+            var oResourceModel = new sap.ui.model.resource.ResourceModel({
+                bundleName: "sample-app-copy.i18n.i18n"
+            });
+            sap.ui.getCore().setModel(oResourceModel, "i18n");
+
+            // XML View
+            new sap.ui.core.mvc.XMLView({
+                viewName: "sample-app-copy.view.App"
+            }).placeAt("content");
+
+        });
+    </script>
+</head>
+
+<body class="sapUiBody" id="content">
+	<div data-sap-ui-component data-name="ui5.databinding" 
+		 data-id="container" 
+		 data-settings='{"id" : "databinding"}'></div>
+</body>
+</html>
+ -->
+
+ <!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Data Binding Tutorial</title>
+	<script id="sap-ui-bootstrap"
+		src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+		data-sap-ui-theme="sap_horizon"
+		data-sap-ui-compat-version="edge"
+		data-sap-ui-async="true"
+		data-sap-ui-on-init="module:sap/ui/core/ComponentSupport"
+		data-sap-ui-resource-roots='{"sample-app-copy": "./"}'>
+	</script>
+</head>
+<body class="sapUiBody" id="content">
+	<div data-sap-ui-component data-name="sample-app-copy" data-id="container" data-settings='{"id" : "databinding"}'></div>
+</body>
 </html>
